update manager change view
