# docs/swagger.yaml
@@ -132,6 +132,33 @@ paths:
       summary: 註冊
       tags:
       - auth
+  /changeshop:
+    put:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: 更改商店
+      parameters:
+      - description: 商店
+        in: formData
+        name: view
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 商店
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 更改商店
+      tags:
+      - manager
   /menu:
     get:
       description: 取得菜單
@@ -689,33 +716,6 @@ paths:
       summary: 取得所有訂單
       tags:
       - order
-  /shop:
-    put:
-      consumes:
-      - application/x-www-form-urlencoded
-      description: 更改商店
-      parameters:
-      - description: 商店
-        in: formData
-        name: view
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 商店
-          schema:
-            type: string
-        "500":
-          description: 内部错误
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 更改商店
-      tags:
-      - manager
   /user:
     get:
       description: 取得用戶名稱
